--- a/_layouts/rm_sidebar_archive.html
+++ b/_layouts/rm_sidebar_archive.html
@@ -13,10 +13,11 @@ layout: default
 {% endif %}
 
   
-
-<div class="archive">
+<div id="main" role="main" style="margin: 0 auto; max-width: 800px;">
+  <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
-      <h1 class="page__title">{{ page.title }}</h1>
+      <h1 class="page__title" style="text-align: center;">{{ page.title }}</h1>
     {% endunless %}
     {{ content }}
+  </div>
 </div>
