--- a/_layouts/rm_sidebar_archive.html
+++ b/_layouts/rm_sidebar_archive.html
@@ -13,7 +13,7 @@ layout: default
 {% endif %}
 
   
-<div id="main" role="main" style="margin: 0 auto; max-width: 2000px;">
+<div id="main" role="main">
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 class="page__title" style="text-align: center;">{{ page.title }}</h1>
